Fixed search and replace buttons states not being visible
Fixed search and replace buttons enable/disable states not being visible.

--- a/Themes/Cobalt.css
+++ b/Themes/Cobalt.css
@@ -32,6 +32,7 @@ meta.button.highlighted {
 }
 meta.button.selected {
     color: #eee;
+    background: linear-gradient(hsb(207, 100%, 55%), hsb(207, 100%, 60%));
 }
 meta.button.highlighted.selected {
     color: white;
